Реализация функционала + тестирование